Stop cards stretching to full width when wrapping

--- a/app/styles/scss/_components/_card.scss
+++ b/app/styles/scss/_components/_card.scss
@@ -13,7 +13,7 @@
     padding-top: $space-md;
     &--half {
       @include mq-lg {
-        flex: 1 0 33%;
+        flex: 0 0 33%;
       }
     }
   }
